# fr0sty-chess

./: CMakeLists.txt  README.md  config.ini
.github/workflows/: c-cpp.yml
src/: Assets.cpp  Assets.h  Board.cpp  Board.h  CMakeLists.txt  Colors.h  Definitions.h  Game.cpp  Game.h  GameManager.h  MoveValidator.cpp  MoveValidator.h  Piece.h  main.cpp
src/Board/: Board.cpp  Board.h  BoardRenderer.cpp  BoardRenderer.h
src/Config/: Config.cpp  Config.h  ThemeManager.cpp  ThemeManager.h
src/Game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h  Input.cpp  Input.h  MoveValidator.h
src/Utils/: BoardData.h  Definitions.h  Functions.cpp  Functions.h
